--- a/work.html
+++ b/work.html
@@ -43,7 +43,16 @@
 
 			</div>
 
-<!-- 			Еще работы -->
+
+			<div class="mywork">
+
+				<a href="https://vlaaadprinter.github.io/DataWarehouse/" target="_blank">
+					<img class="lairmen" src="img/DataWarehouse.png" alt="LairMen">
+				</a>
+
+			</div>
+			
+			<!-- 			Еще работы -->
 
 			<!-- <div class="mywork">
 
